--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "will-you-be-my-valentine",
-  "homepage": "https://saurabhnemade.github.io/will-you-be-my-valentine",
+  "homepage": "https://munetracker.github.io/bemyvalentine/",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
