--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "will-you-be-my-valentine",
+  "name": "bemyvalentine",
   "homepage": "https://munetracker.github.io/bemyvalentine/",
-  "private": true,
+  "private": false,
   "version": "0.0.2",
   "type": "module",
   "scripts": {
